# rs-uuid-gen

./: Cargo.toml  LICENSE  README.md
src/: main.rs
