[package]
name = "uuid-gen"
version = "0.1.0"
authors = ["Theodor Lindquist <theodor.lindquist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
clap = "3.0.0-beta.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
